--- a/translations/ru.json
+++ b/translations/ru.json
@@ -1,4 +1,10 @@
 {
-  "greeting": "Здарова, братишка!",
-  "welcomeMessage": "Добро пожаловать в мое крутое приложение"
-}
+  "rate": "Оцените нас",
+  "error": "Ошибка",
+  "close": "Закрыть",
+  "quote": "Цитата дня",
+  "chat": "Чат",
+  "share": "Поделиться",
+  "copy": "Копировать",
+  "discuss": "Обсуждать"
+} 
